2015-03-18  Dan Bernstein  <mitz@apple.com>

        prepare-ChangeLog doesn't understand C string literals split across multiple lines with \
        https://bugs.webkit.org/show_bug.cgi?id=142815

        Reviewed by Darin Adler.

        * Scripts/prepare-ChangeLog:
        (get_function_line_ranges_for_cpp): If the line ends with a backslash instead of a matching
        quotation mark, use new variable $quotation_mark to remember what we are looking for, and
        keep consuming the quoted text until the matching quotation mark is reached. Emit the
        warning only if a line ends without a backslash before the matching quotation mark was found.

2015-03-18  Joseph Pecoraro  <pecoraro@apple.com>

        Remove unused "preprocessor" parameter to sub-CodeGenerators
        https://bugs.webkit.org/show_bug.cgi?id=142793

        Reviewed by Darin Adler.

        * WebKitTestRunner/InjectedBundle/Bindings/CodeGeneratorTestRunner.pm:
        (new):

2015-03-18  Csaba Osztrogonác  <ossy@webkit.org>

        [EFL] Bump gstreamer version to 1.4.4
        https://bugs.webkit.org/show_bug.cgi?id=142782

        Reviewed by Philippe Normand.

        * efl/jhbuild.modules:
        * efl/patches/gst-libav.patch:
        * efl/patches/gst-plugins-bad-remove-gnustep-support.patch: Added.
        * efl/patches/gst-prevent-neon-check-in-configure-from-passing-under-aarch64.patch: Removed.

2015-03-17  Tim Horton  <timothy_horton@apple.com>

        Fix the iOS build.

        * WebKitTestRunner/InjectedBundle/ios/InjectedBundleIOS.mm:
        (WTR::InjectedBundle::platformInitialize):

2015-03-17  Dean Jackson  <dino@apple.com>

        check-webkit-style should allow "bool a : 1"
        https://bugs.webkit.org/show_bug.cgi?id=142794

        Reviewed by Brent Fulgham.

        We should allow member bitfields of the form:

        bool m_var : 1;

        It seems that Visual Studio 8 was the last compiler that