@@ -1,3 +1,13 @@
+2015-03-18  Alexey Proskuryakov  <ap@apple.com>
+
+        Tweak how AppleSystemFontOSSubversion default is added
+        https://bugs.webkit.org/show_bug.cgi?id=142835
+
+        Reviewed by Dan Bernstein.
+
+        * DumpRenderTree/mac/DumpRenderTree.mm:
+        (setDefaultsToConsistentValuesForTesting):
+
 2015-03-18  Dan Bernstein  <mitz@apple.com>
 
         prepare-ChangeLog doesn't understand C string literals split across multiple lines with \
